# wasi-demo

./: .dprint.json  .gitignore  Cargo.toml  README.md  build-components.sh  justfile  package-lock.json  package.json
.helix/: languages.toml
cli/: Cargo.toml
cli/src/: bindings.rs  main.rs
crates/base64/: Cargo.toml
crates/base64/src/: bindings.rs  lib.rs
crates/ckcompat-dr-kdf/: Cargo.toml
crates/ckcompat-dr-kdf/src/: bindings.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
js/node-cli/: cli.js  cli.ts  composed.core2.wasm  composed.core4.wasm  package-lock.json
js/vite/: package-lock.json  package.json
js/vite/src/: demo.ts  main.ts
js/wasm/: composed.core.wasm  composed.js
js/wasm/interfaces/: wasi-io-streams.d.ts
src/: bindings.rs  lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
wit/: base64.wit  ckcompat-dr-kdf.wit  cli.wit  crypto.wit  responder.wit  ss-responder.wit  utils.wit
www/: cli.js  cli.ts  composed.d.ts  index.html  package-lock.json  package.json
www/interfaces/: ss-responder-base64.d.ts  ss-responder-ckcompact-dr-kdf.d.ts
