[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "ss:responder"

[package.metadata.component.target]
path = "wit/responder.wit"

[package.metadata.component.target.dependencies]
"ss:utils" = { path = "wit/utils.wit" }
"ss:crypto" = { path = "wit/crypto.wit" }

# [package.metadata.component.dependencies]
# "ss:utils" = { path = "target/wasm32-wasi/release/utils.wasm" }
# "ss:crypto" = { path = "target/wasm32-wasi/release/ckcompat_dr_kdf.wasm" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"

[dependencies]
anyhow = "1"
bitflags = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }
wit-bindgen-rt = { workspace = true }
