[package]
name = "responder"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "ss:responder"

[package.metadata.component.target]
path = "wit"
world = "responder"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"

[dependencies]
anyhow = "1"
bitflags = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }
wit-bindgen-rt = { workspace = true }
