[package]
name = "responder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "ss:responder"

[package.metadata.component.target]
path = "wit"
world = "responder"

# See https://github.com/bytecodealliance/cargo-component/issues/120
# [package.metadata.component.target.dependencies]
# "ss:base64" = { path = "target/wasm32-wasi/release/base64.wasm" }
# "ss:ckcompat-dr-kdf" = { path = "target/wasm32-wasi/release/ckcompat-dr-kdf.wasm" }

[workspace]
members = ["cli", "crates/*"]

[workspace.dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"

[dependencies]
anyhow = "1"
bitflags = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }
wit-bindgen-rt = { workspace = true }
