[package]
name = "ss-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "ss:responder"

[package.metadata.component.target]
path = "../wit/ss-responder.wit"
world = "cli"

[dependencies]
anyhow = "1"
clap = { version = "4.3.19", features = ["derive"] }
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }
