[package]
name = "ss-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "ss:responder"

[package.metadata.component.target]
path = "../wit/responder.wit"
world = "cli"

[dependencies]
anyhow = "1"
bitflags = "2.4.2"
clap = { version = "4.3.19", features = ["derive"] }
wit-bindgen-rt = "0.21.0"
