[package]
name = "ckcompat-dr-kdf"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
hkdf = "0.12.3"
hmac = "0.12.1"
sha2 = "0.10.6"
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "ss:crypto"

[package.metadata.component.target]
path = "../../wit/crypto.wit"

[package.metadata.component.dependencies]
